--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.1",
+    "react-scripts": "0.2.1",
     "sass-loader": "^6.0.6",
     "scss-loader": "0.0.1",
     "style-loader": "^0.18.2",
